# cg25-NorthernKingdom

./: .gitignore  CMakeLists.txt  CMakePresets.json  GENERATE_SLN.bat  vcpkg-configuration.json  vcpkg.json
assets/: settings.ini
src/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NorthernKingdom.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Shader/: fragment.shader  normal_frag.shader  normal_vert.shader  vertex.shader
src/Utils/: Utils.h
src/castle/: Hyrule_Castle.mtl
